# android_device_hisilicon

Hi3798MV100/: Android.mk  AndroidBoard.mk  AndroidProducts.mk  BoardConfig.mk  Hi3798MV100.mk  customer.mk  device.mk  vendorsetup.sh
Hi3798MV100/etc/: Android.mk  bootargs_Hi3798MV100-emmc-loader.txt  bootargs_Hi3798MV100-emmc-recovery.txt  bootargs_Hi3798MV100-emmc-spca.txt  bootargs_Hi3798MV100-emmc-tee-vmx.txt  bootargs_Hi3798MV100-emmc-tee.txt  bootargs_Hi3798MV100-emmc-vmx.txt  bootargs_Hi3798MV100-emmc.txt  bootargs_Hi3798MV100-nand-loader.txt  bootargs_Hi3798MV100-nand-spca.txt  bootargs_Hi3798MV100-nand-tee-vmx.txt  bootargs_Hi3798MV100-nand-tee.txt  bootargs_Hi3798MV100-nand-vmx.txt  bootargs_Hi3798MV100-nand.txt  bootargs_Hi3798MV100-sdcardfs-emmc-loader.txt  bootargs_Hi3798MV100-sdcardfs-emmc-spca.txt  bootargs_Hi3798MV100-sdcardfs-emmc.txt  init.Hi3798MV100.rc  vold.emmc.fstab  (+10 more)
bigfish/: Android.mk  install_notes_cn.txt  install_notes_en.txt
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/: Makefile  Makefile.in  configure  configure.in  sample_rules.mak
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/data/: Makefile.am  Makefile.in
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/data/df_neo/: Makefile.in
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/data/spacedream/: Makefile.in
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/src/: Makefile.am  Makefile.in  df_andi3d.c  df_dok.c  df_input.c  df_texture3d.c  df_window.c
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/src/df_knuckles/: Makefile.in
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/src/df_neo/: Makefile.in
bigfish/sdk/source/component/directfb/DirectFB-examples-1.6.0/src/spacedream/: Makefile.in
(+7350 files in other folders)
