AC_INIT
AC_CONFIG_SRCDIR([src/df_andi.c])

AC_PREREQ(2.61)

PACKAGE=DirectFB-examples
VERSION=1.6.0

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AC_SUBST(VERSION)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC


dnl Clear default CFLAGS
if test x"$CFLAGS" = x"-g -O2"; then
  CFLAGS=
fi
  
CFLAGS="-O3 -pipe $CFLAGS"

if test "x$GCC" = xyes; then
  CFLAGS="-Wall $CFLAGS"
fi

AC_CHECK_HEADERS(stdbool.h)

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  CFLAGS="$CFLAGS -g3"
fi)


DIRECTFB_REQUIRED_VERSION=1.4.14

PKG_CHECK_MODULES(DIRECTFB, directfb >= $DIRECTFB_REQUIRED_VERSION,[ WATER=`$PKG_CONFIG --variable=water directfb` ],
	AC_MSG_ERROR([$DIRECTFB_PKG_ERRORS
*** DirectFB $DIRECTFB_REQUIRED_VERSION or newer is required. The latest version
*** of DirectFB is available from http://www.directfb.org/.]))

AM_CONDITIONAL( WATER_RUNS, test "$WATER" = "runs" )

AC_MSG_CHECKING(for DirectFB >= 1.5.3)
  if $PKG_CONFIG --atleast-version "1.5.3" directfb ; then
	STEREO_API=yes
        AC_MSG_RESULT([found])
  else
        STEREO_API=no
        AC_MSG_RESULT([not found])
  fi

AM_CONDITIONAL(HAVE_STEREO_API, test "$STEREO_API" = "yes")

CFLAGS="$CFLAGS -Werror-implicit-function-declaration"

DATADIR=$datadir/directfb-examples
AC_SUBST(DATADIR)

AC_CONFIG_FILES([
Makefile
data/Makefile
data/df_neo/Makefile
data/spacedream/Makefile
src/Makefile
src/df_knuckles/Makefile
src/df_neo/Makefile
src/spacedream/Makefile
])
AC_OUTPUT


if test -n "$WATER"; then
   echo
   echo Water $WATER
fi

